just one comment

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             plrScore = parseInt(plrScoreElement.textContent)
             compScore = parseInt(compScoreElement.textContent)
 
+            // pokonsol loguj rzeczy i popatrz bo nie dziala po dodaniu score counterow etc
+            // przemysl logike tego?
+
             let upperCasePlayer = playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1)
 
             computerSelection = computerPlay()
