--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             compScore = parseInt(compScoreElement.textContent)
 
             // pokonsol loguj rzeczy i popatrz bo nie dziala po dodaniu score counterow etc
-            // przemysl logike tego?
+            // przemysl logike tego? hmm
 
             let upperCasePlayer = playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1)
 
